--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -1,27 +1,34 @@
-apply plugin: 'application'
+apply plugin: 'kotlin'
 
-sourceSets.main.resources.srcDirs += [ rootProject.file('assets').absolutePath ]
-mainClassName = 'com.ownedoutcomes.desktop.DesktopLauncher'
-eclipse.project.name = appName + '-desktop'
-sourceCompatibility = 1.7
+sourceCompatibility = 1.6
 
-dependencies {
-  compile project(':core')
-  compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
-  compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
-  compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
-  compile "com.badlogicgames.gdx:gdx-controllers-desktop:$gdxVersion"
-  compile "com.badlogicgames.gdx:gdx-controllers-platform:$gdxVersion:natives-desktop"
+sourceSets.main.java.srcDirs = ['src/']
+sourceSets.main.kotlin.srcDirs = ['src/']
+sourceSets.main.resources.srcDirs += ['../android/assets']
+
+mainClassName = 'com.ownedoutcomes.DesktopLauncher'
+
+run {
+    ignoreExitValue = true
 }
 
 jar {
-  archiveName "${appName}-${version}.jar"
-  from { configurations.compile.collect { zipTree(it) } }
-  manifest {
-    attributes 'Main-Class': project.mainClassName
-  }
+    archiveName "${appName}-${version}.jar"
+    from { configurations.compile.collect { zipTree(it) } }
+    manifest {
+        attributes 'Main-Class': project.mainClassName
+    }
 }
 
-run {
-  ignoreExitValue = true
+dependencies {
+    implementation project(":core")
+    implementation "com.github.czyzby:ktx-app:$ktxVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    implementation "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
+    implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+    implementation "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
+    implementation "com.badlogicgames.gdx:gdx-controllers-desktop:$gdxVersion"
+    implementation "com.badlogicgames.gdx:gdx-controllers-platform:$gdxVersion:natives-desktop"
+    implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
+    implementation "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
 }
